Temporarily removed down arrow

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<p class="name-sub-text subtext">mechanical engineer // programmer</p>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Resume</button></a>
 	<a href="projects.html"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Projects</button></a></br>
-	<a href="index.html#about-me"><img src="images/down_arrow.svg" class="img-fluid down-arrow"></a>
+	<!-- <a href="index.html#about-me"><img src="images/down_arrow.svg" class="img-fluid down-arrow"></a> -->
 </div>
 
 
