Added new Fleet images

--- a/project_pages/fleet.html
+++ b/project_pages/fleet.html
@@ -55,6 +55,14 @@
   		<div class="row">
   			<p class="project-information">Fleet is a personal project to create an open source schematic for a swarm of low cost, highly modular robots. This project is designed to enable easy communication from robot to robot, and from robot to server. All designs are available in a <a href="https://github.com/0xJeremy/fleet">Github repo</a>. I plan to use Fleet as a platform for software development for multi-robot systems.</p>
   		</div>
+      <div class="row">
+        <div class="col">
+            <img src="../images/fleet/fleet3.jpeg" class="img-fluid project-image" alt="Responsive image">
+        </div>
+        <div class="col">
+           <img src="../images/fleet/fleet4.jpeg" class="img-fluid project-image" alt="Responsive image">
+        </div>
+      </div>
   	</div>
 </div>
 
