Added BCI Team UI

--- a/projects.html
+++ b/projects.html
@@ -119,6 +119,14 @@
   </div>
   <div class="row">
     <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/bci/bci.png" alt="BCI UI">
+        <div class="card-body">
+          <h5 class="card-title">Tufts BCI Team UI</h5>
+          <p class="card-text">As part of the Tufts BCI Team, this user interface allows realtime monitoring of brain activity.</p>
+          <a href="project_pages/bci.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/ujumbo/jumbo_1.JPG" alt="uJumbo">
         <div class="card-body">
           <h5 class="card-title">µJumbo</h5>
